# Rust-Neural-Networks

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  CLAUDE.md  Cargo.toml  INVESTIGATION.md  README.md  mlp_simple.rs  mnist_attention_pool.rs  mnist_cnn.rs  mnist_mlp.rs  visualize_attention.py
.github/workflows/: rust-ci.yml
config/: activations_demo.json  mnist_mlp_cosine.json  mnist_mlp_exponential.json  mnist_mlp_step.json
config/architectures/: cnn_simple.json  mlp_medium.json  mlp_simple.json
docs/: 1 Overview.md  2 Getting-Started.md  2a Installation.md  2b MNIST-Dataset-Setup.md  3 Model-Implementations.md  3a MNIST-MLP.md  3b MNIST-CNN.md  3c MNIST-Attention-Model.md  3d Simple-XOR-MLP.md  4 Python-Utilities.md  4a Digit-Recognizer-GUI.md  4b Training-Pipeline.md  5 Architecture-&-Design.md  5a BLAS-Integration.md  5b Training-Visualization.md  5c Binary-Model-Format.md  6 Development-Reference.md  6a Build-System.md  6b Dependencies.md  6c Project-Configuration.md  README.md  layer_abstraction_design.md
logs/: attention_final.txt  attention_hyperparameter_tuning.txt  attention_validation_runs.txt  baseline_attention_run.txt
src/: architecture.rs  config.rs  lib.rs
src/layers/: batchnorm.rs  conv2d.rs  dense.rs  dropout.rs  mod.rs  trait.rs
src/optimizers/: adam.rs  mod.rs  sgd.rs
src/utils/: activations.rs  lr_scheduler.rs  (+2 more)
tests/: test_activation_gradients.rs  test_activations.rs  test_architecture.rs  test_backward_pass.rs  test_batchnorm.rs  test_bin_coverage.rs  test_config.rs  test_dropout.rs  test_forward_pass.rs  test_gradient_checking.rs  test_library.rs  test_lr_scheduler.rs  test_matrix_ops.rs  test_rng.rs
