[package]
name = "rust_neural_networks"
version = "0.1.0"
edition = "2021"

[dependencies]
cblas = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.14", features = ["accelerate"] }

[[bin]]
name = "mnist_mlp"
path = "mnist_mlp.rs"

[[bin]]
name = "mlp_simple"
path = "mlp_simple.rs"

[[bin]]
name = "mnist_cnn"
path = "mnist_cnn.rs"

[[bin]]
name = "mnist_attention_pool"
path = "mnist_attention_pool.rs"

[dev-dependencies]
approx = "0.5"

[profile.release]
lto = true
codegen-units = 1
